# obs-plugin-reddot

./: CMakeLists.txt  MEMORIES.md  README.md  buildspec.json
assets/: fightstick.css
src/: plugin-main.c
